--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,29 @@
-baseURL = "http://example.org/"
+baseURL = "https://gmcintire.github.io"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Graham McIntire's thoughts"
+theme = "terminal"
+paginate = 5
+[params]
+  # dir name of your blog content (default is `content/posts`)
+  contentTypeName = "posts"
+  # ["orange", "blue", "red", "green", "pink"]
+  themeColor = "orange"
+
+[languages]
+  [languages.en]
+    title = "Terminal"
+    subtitle = "A simple, retro theme for Hugo"
+    keywords = ""
+    copyright = ""
+    readMore = "Read more"
+    readOtherPosts = "Read other posts"
+
+    [languages.en.params.logo]
+      logoText = "terminal"
+      logoHomeLink = "/"
+
+    [languages.en.menu]
+      [[languages.en.menu.main]]
+        identifier = "about"
+        name = "About"
+        url = "/about"
